# charlatan

./: .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  schema.sql
.github/workflows/: rust.yml
migrations/0/: down.sql  up.sql
migrations/2020-04-29-101557_create_podcasts/: up.sql
scripts/: s
src/: app.rs  auth.rs  crawl.rs  db.rs  entity.rs  episode.rs  error.rs  filters.rs  handlers.rs  lib.rs  main.rs  models.rs  podcast.rs  queue.rs  rejection.rs  response.rs  schema.rs
src/auth/: db.rs  entity.rs  error.rs  filter.rs  handler.rs
src/crawl/: filter.rs  handler.rs
src/episode/: app.rs  db.rs  entity.rs  error.rs  filter.rs  handler.rs  model.rs
src/podcast/: db.rs  entity.rs  error.rs  filter.rs  handler.rs  model.rs
src/queue/: db.rs  filter.rs  handler.rs
web/: package.json
web/src/pages/: index.js  index.tsx
