[package]
name = "charlatan-server"
version = "0.1.0"
authors = ["Danny Navarro"]
edition = "2018"

[dependencies]
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
dotenv = { version = "0.15" }
rss = { version = "1.0", features = ["builders", "from_url"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
