[package]
name = "charlatan"
version = "0.1.0"
authors = ["Danny Navarro"]
edition = "2018"

[dependencies]
anyhow = "1.0"
log = "0.4"
rss = { version = "1.0", features = ["builders", "from_url"] }
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "sqlite" ] }
thiserror = "1.0"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[features]
# Include web assets
web = []
